<resources>
    <string name="app_name">InstaRoom</string>

    <!-- START -->
    <string name="start">Start</string>

    <!-- LOGIN -->
    <string name="login">Login</string>
    <string name="sign_in">Sign in with Google</string>

    <!-- DASHBOARD -->
    <string name="dashboard">Dashboard</string>
    <string name="sign_out">Sign out</string>
    <string name="this_room_is_free_now">This room is free now.</string>
    <string name="appointment_created">Appointment created</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit_in_google_calendar">Edit in google calendar</string>
    <string name="quick">Quick</string>
    <string name="precise">Precise</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book</string>
    <string name="book_for_later">Book for later</string>
    <string name="instant_book">Instant Book</string>
    <string name="occupied">Occupied</string>
    <string name="from_now_for">From now for</string>
    <string name="appointment_name">Appointment name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="appointment_duration">Appointment duration</string>
    <string name="all_day_appointment">All-day appointment</string>
    <string name="making_an_appointment">Making an appointment…</string>
    <string name="free">free</string>
    <string name="book_now">book now</string>
    <string name="edit">edit</string>
    <string name="free_rooms">Free rooms</string>
    <string name="your_bookings">Your bookings</string>
    <string name="occupied_rooms">Occupied rooms</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="booking_success_dialog_title">Appointment created</string>
    <string name="delete">delete</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>
