<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="pl.elpassion.instaroom.start.StartFragment"
        android:label="@string/start">
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/app_navigation" />
        <action
            android:id="@+id/action_startFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/app_navigation" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="pl.elpassion.instaroom.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/app_navigation" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="pl.elpassion.instaroom.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/dashboard_fragment">
        <action
            android:id="@+id/action_dashboardFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/app_navigation" />
    </fragment>

</navigation>
