<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:name="pl.elpassion.instaroom.booking.BookingFragment"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/appointmentBookingIcon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_android"
        app:layout_constraintBottom_toBottomOf="@id/appointmentBookingTitle"
        app:layout_constraintEnd_toStartOf="@id/appointmentBookingTitle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appointmentBookingTitle" />

    <TextView
        android:id="@+id/appointmentBookingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/appointmentBookingIcon"
        tools:text="booking green room" />

    <View
        android:id="@+id/appointment_settings_first_separator"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingTitle" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/appointmentBookingTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appointment_settings_first_separator">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/appointmentBookingQuickTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/appointmentBookingPreciseTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precise" />
    </com.google.android.material.tabs.TabLayout>

    <include
        android:id="@+id/appointmentBookingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/booking_details_fragment"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingTabs" />

    <Button
        android:id="@+id/appointmentBookingCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/appointmentBookingBookButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingContainer" />

    <Button
        android:id="@+id/appointmentBookingBookButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/book"
        app:layout_constraintBaseline_toBaselineOf="@id/appointmentBookingCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/appointmentBookingCancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
