<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/appointmentBookingHelper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/appointmentBookingPreciseTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginTop="@dimen/basic_padding"
        android:text="@string/appointment_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/appointmentBookingPreciseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseTitleLabel"
        tools:text="John Doe's booking" />

    <TextView
        android:id="@+id/appointmentBookingPreciseDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginTop="@dimen/large_padding"
        android:text="@string/appointment_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseTitle" />

    <TextView
        android:id="@+id/appointmentBookingPreciseTimeFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginTop="@dimen/basic_padding"
        android:text="@string/from"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseDurationLabel" />

    <TextView
        android:id="@+id/appointmentBookingPreciseTimeToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBaseline_toBaselineOf="@id/appointmentBookingPreciseTimeFromLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/appointmentBookingHelper" />

    <EditText
        android:id="@+id/appointmentBookingPreciseTimeFrom"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/appointmentBookingPreciseTimeFromLabel"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseTimeFromLabel" />

    <View
        android:layout_width="12dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/appointmentBookingPreciseTimeFrom"
        app:layout_constraintEnd_toStartOf="@id/appointmentBookingPreciseTimeTo"
        app:layout_constraintStart_toEndOf="@id/appointmentBookingPreciseTimeFrom"
        app:layout_constraintTop_toTopOf="@id/appointmentBookingPreciseTimeFrom" />

    <EditText
        android:id="@+id/appointmentBookingPreciseTimeTo"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/appointmentBookingPreciseTimeToLabel"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseTimeFromLabel" />

    <TextView
        android:id="@+id/appointmentBookingPreciseTimeAllDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginTop="@dimen/basic_padding"
        android:text="@string/all_day_appointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appointmentBookingPreciseTimeFrom" />

    <Switch
        android:id="@+id/appointmentBookingPreciseAllDaySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        app:layout_constraintBottom_toBottomOf="@id/appointmentBookingPreciseTimeAllDay"
        app:layout_constraintStart_toEndOf="@id/appointmentBookingPreciseTimeAllDay"
        app:layout_constraintTop_toTopOf="@id/appointmentBookingPreciseTimeAllDay" />

</androidx.constraintlayout.widget.ConstraintLayout>
