<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/large_padding"
    android:paddingBottom="@dimen/small_padding">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/TextBold.Black.XLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/xxlarge_padding"
        android:textColor="@color/bookingSuccessTitleColor"
        android:text="@string/booking_success_dialog_title"/>

    <TextView
        android:id="@+id/bookingTitle"
        style="@style/TextLight.Black.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/dialogTitle"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        android:layout_marginTop="@dimen/xxlarge_padding"
        android:textColor="@color/textBlack"
        tools:text="Quick call with client"/>

    <TextView
        android:id="@+id/bookingFromTime"
        style="@style/TextLight.Black.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:30 PM"
        app:layout_constraintTop_toBottomOf="@id/bookingTitle"
        app:layout_constraintLeft_toLeftOf="@id/dialogTitle"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/bookingToTime"
        style="@style/TextLight.Black.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/bookingFromTime"
        app:layout_constraintLeft_toRightOf="@id/bookingFromTime"
        android:layout_marginLeft="@dimen/large_padding"
        tools:text="01:30 PM"/>

    <TextView
        android:id="@+id/bookingRoomInfo"
        style="@style/TextLight.Black.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/dialogTitle"
        app:layout_constraintTop_toBottomOf="@id/bookingFromTime"
        android:layout_marginTop="5dp"
        tools:textColor="@color/greenRoom"
        tools:text="in Green Room"/>
    
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/greyDark"
        app:layout_constraintTop_toBottomOf="@id/bookingRoomInfo"
        android:layout_marginTop="@dimen/xxlarge_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BookingSuccessButton.Edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:text="@string/edit_in_google_calendar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismissButton"
        style="@style/BookingSuccessButton.Dismiss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editButton"
        android:layout_marginLeft="@dimen/basic_padding"
        android:layout_marginRight="@dimen/basic_padding"
        android:text="@string/dismiss" />

</androidx.constraintlayout.widget.ConstraintLayout>