<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/large_padding"
    android:paddingBottom="@dimen/basic_padding">

    <TextView
        android:id="@+id/bookingStatusTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        android:text="@string/appointment_created"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bookingStatusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingStatusTitle"
        tools:text="John Doe's booking" />

    <TextView
        android:id="@+id/bookingStatusBeginTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingStatusName"
        tools:text="12:30" />

    <TextView
        android:id="@+id/bookingStatusBeginTimeZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/bookingStatusBeginTime"
        app:layout_constraintStart_toEndOf="@id/bookingStatusBeginTime"
        tools:text="AM" />

    <View
        android:id="@+id/bookingStatusTime"
        android:layout_width="6dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/bookingStatusBeginTime"
        app:layout_constraintStart_toEndOf="@id/bookingStatusBeginTimeZone"
        app:layout_constraintTop_toTopOf="@id/bookingStatusBeginTime" />

    <TextView
        android:id="@+id/bookingStatusEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/bookingStatusBeginTime"
        app:layout_constraintStart_toEndOf="@id/bookingStatusTime"
        tools:text="12:30" />

    <TextView
        android:id="@+id/bookingStatusEndTimeZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/bookingStatusEndTime"
        app:layout_constraintStart_toEndOf="@id/bookingStatusEndTime"
        tools:text="AM" />

    <TextView
        android:id="@+id/bookingStatusRoomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        android:text="in Green Room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingStatusBeginTime" />

    <Button
        android:id="@+id/bookingStatusEditButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginEnd="@dimen/basic_padding"
        android:layout_marginBottom="@dimen/medium_padding"
        android:text="@string/edit_in_google_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingStatusRoomName" />

    <Button
        android:id="@+id/bookingStatusDismissButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding"
        android:layout_marginEnd="@dimen/basic_padding"
        android:text="@string/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookingStatusEditButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
